2009-09-19  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* AUTHORS, NEWS: Added to make autogen happy.
	* Makefile.am: Added support for automake, non-recursive.
	* autogen.sh: Added as part of support to the GNU Build System.
	* classix.in: Fixed path to data files. Simplified header.
	* classix/: Moved to src/, so that classix.in can be used to create classix.
	* configure.ac: Added initial support for autoconf.
	* src/main.py: Fixed path to data files.

--- a/classix.in
+++ b/classix.in
@@ -1,11 +1,10 @@
-#! @PYTHON@ @PYOPTIONS@
-# -*- python -*-
+#! @PYTHON@
 # -*- coding: utf-8 -*-
 
 import os, gtk
 from classix import config, main
 
-ui_file_name = os.path.join(config.datadir, "classix.ui")
+ui_file_name = os.path.join(config.pkgdatadir, "classix.ui")
 
 main_window = main.MainWindow(ui_file_name=ui_file_name)
 
