2009-09-19  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* Makefile.am, data/classix.desktop: Added desktop menu entry.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,3 +31,8 @@ dist_pkgdata_DATA = \
     data/classix.gz \
     data/classix.db
 
+desktopdir = $(datadir)/applications
+desktop_DATA = data/classix.desktop
+
+CLEANFILES += $(desktop_DATA)
+
