--- a/trunk/data/classix.desktop.in
+++ b/trunk/data/classix.desktop.in
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Classix
-Comment=Search ICD-10 codes
+_Name=Classix
+_Comment=Search ICD-10 codes
 Exec=classix
 Categories=Education;Science;MedicalSoftware
 
