--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: http://code.google.com/p/classix/
 
 Package: classix
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends},
+Depends: ${shlibs:Depends}, ${misc:Depends}, maemo-select-menu-location
  python2.5, libsqlite3-0,
  python2.5-gtk2, libgtk2.0-0 (>= 2:2.10),
  python2.5-gobject, libglib2.0-0 (>= 2.12)
