--- a/debian/rules
+++ b/debian/rules
@@ -31,23 +31,22 @@ endif
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 	cp -f /usr/share/misc/config.guess config.guess
 endif
-	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
+	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs" \
+	--enable-maemo
 
 
 build: build-stamp
 
-build-stamp: patch config.status 
+build-stamp: config.status 
 	dh_testdir
 
 	# Add here commands to compile the package.
-	"$(MAKE)"
+	"$(MAKE)" 
 	#docbook-to-man debian/classix.sgml > classix.1
 
 	touch $@
 
-clean: clean1 unpatch
-
-clean1:
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp 
@@ -105,14 +104,4 @@ binary-arch: build install
 
 binary: binary-indep binary-arch
 
-patch: patch-stamp
-
-patch-stamp:
-	dpatch apply-all
-	dpatch cat-all >patch-stamp
-
-unpatch:
-	dpatch deapply-all
-	rm -rf patch-stamp debian/patched
-
-.PHONY: build clean binary-indep binary-arch binary install patch unpatch
+.PHONY: build clean binary-indep binary-arch binary install
