--- a/debian/rules
+++ b/debian/rules
@@ -31,8 +31,9 @@ endif
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 	cp -f /usr/share/misc/config.guess config.guess
 endif
-	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs" \
-	--enable-maemo
+	PYTHON="/usr/bin/python2.5" ./configure $(CROSS) --prefix=/usr \
+	--mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info \
+	CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs" --enable-maemo
 
 
 build: build-stamp
