2009-10-04  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* debian/changelog: Information for first release.
	* debian/control: Removed obsolete dpatch dependency.
	* debian/rules: Passed PYTHON="/usr/bin/python2.5" so that the package 
	can be built in a system with Python 2.6.

--- a/branches/maemo/debian/control
+++ b/branches/maemo/debian/control
@@ -2,7 +2,7 @@ Source: classix
 Section: user/science
 Priority: extra
 Maintainer: Leonardo Ferreira Fontenelle <leonardof@gnome.org>
-Build-Depends: debhelper (>= 4), dpatch, autotools-dev, python2.5-dev
+Build-Depends: debhelper (>= 4), autotools-dev, python2.5-dev
 Standards-Version: 3.6.0
 Homepage: http://code.google.com/p/classix/
 
