--- a/branches/debian/debian/control
+++ b/branches/debian/debian/control
@@ -2,14 +2,14 @@ Source: classix
 Section: user/science
 Priority: extra
 Maintainer: Leonardo Ferreira Fontenelle <leonardof@gnome.org>
-Build-Depends: debhelper (>= 4), autotools-dev, python2.5-dev
-Standards-Version: 3.6.0
+Build-Depends: debhelper (>= 7), autotools-dev, python-dev (>= 2.5)
+XS-Python-Version: >= 2.5, << 3
+Standards-Version: 3.8.3
 Homepage: http://code.google.com/p/classix/
 
 Package: classix
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, maemo-select-menu-location
- python2.5, libsqlite3-0,
- python2.5-gtk2, libgtk2.0-0 (>= 2:2.10),
- python2.5-gobject, libglib2.0-0 (>= 2.12)
+Depends: ${shlibs:Depends}, ${misc:Depends}, python (>2.5), libsqlite3-0,
+ python-gtk2, libgtk2.0-0 (>= 2.10), python-gobject, libglib2.0-0 (>= 2.12)
+XB-Python-Version: ${python:Versions}
 Description: ICD-10 lookup application
