--- a/branches/debian/debian/rules
+++ b/branches/debian/debian/rules
@@ -31,9 +31,9 @@ endif
 ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 	cp -f /usr/share/misc/config.guess config.guess
 endif
-	PYTHON="/usr/bin/python2.5" ./configure $(CROSS) --prefix=/usr \
-	--mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info \
-	CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs" --enable-maemo
+	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man \
+	--infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" \
+	LDFLAGS="-Wl,-z,defs" --enable-maemo
 
 
 build: build-stamp
