--- a/branches/ubuntu/debian/rules
+++ b/branches/ubuntu/debian/rules
@@ -33,7 +33,7 @@ ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 endif
 	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man \
 	--infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" \
-	LDFLAGS="-Wl,-z,defs" --enable-maemo
+	LDFLAGS="-Wl,-z,defs"
 
 
 build: build-stamp
