2009-10-08  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* src/main.py:
	* data/classix.ui:
	* classix.in:
	Added full screen mode (F6 in on Maemo, F11 otherwise)

--- a/classix.in
+++ b/classix.in
@@ -13,6 +13,10 @@ for module in gettext, locale:
 
 ui_file_name = os.path.join(config.pkgdatadir, "classix.ui")
 
-main_window = main.MainWindow(ui_file_name=ui_file_name)
+try:
+    import hildon
+    main_window = main.HildonMainWindow(ui_file_name=ui_file_name)
+except ImportError:
+    main_window = main.MainWindow(ui_file_name=ui_file_name)
 
 gtk.main()
