2009-11-06  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* Makefile.am:
	* bin/Makefile.am:
	* classix.in:
	* configure.ac:
	* src/Makefile.am:
	* src/config.py.in:
	* src/main.py:
	Moved classix.in to directory "bin" and renamed directory "src" to
	"classix".

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ## AUTOMAKE_OPTIONS = subdir-objects
-SUBDIRS = data po src
+SUBDIRS = bin classix data po
 
 
 bin_SCRIPTS = classix
