2009-11-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* Makefile.am: Removed obsolete code.
	* configure.ac: Fixed location of AC_CONFIG_SRCDIR.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,22 +2,13 @@
 ## AUTOMAKE_OPTIONS = subdir-objects
 SUBDIRS = bin classix data po
 
-
-bin_SCRIPTS = classix
-CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = classix.in
-     
-classix: classix.in Makefile
-	sed -e s![@]PYTHON[@]!@PYTHON@! < $< > $@
-
-
 DISTCLEANFILES = \
 	intltool-extract \
 	intltool-merge   \
 	intltool-update  \
 	po/.intltool-merge-cache
 	
-EXTRA_DIST += \
+EXTRA_DIST = \
 	intltool-extract.in \
 	intltool-merge.in   \
 	intltool-update.in
