--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -5,7 +5,7 @@ AC_INIT(Classix, 0.3, http://code.google.com/p/classix/issues, classix,
 	http://code.google.com/p/classix/)
 AC_COPYRIGHT([Copyright (C) 2009 the Classix authors.
 This file is distributed under the same license as the AC_PACKAGE_NAME package.])
-AC_CONFIG_SRCDIR(classix.in)
+AC_CONFIG_SRCDIR(bin/classix.in)
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
