2009-11-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* bin/classix.in:
	* classix/Makefile.am:
	* classix/baseui.py:
	* classix/commandlineui.py:
	* classix/common.py:
	* classix/databasecreator.py:
	* classix/gtkui.py:
	* classix/hildonui.py:
	* classix/main.py:
	* classix/searchbackend.py:
	Split main.py in a handful of files.
	Created a superclass for the user interface, and removed the superclass for
	the search backend.

--- a/classix/Makefile.am
+++ b/classix/Makefile.am
@@ -8,7 +8,16 @@ do_subst = sed \
 	-e s![@]PACKAGE[@]!$(PACKAGE)!g		\
 	-e s![@]VERSION[@]!$(VERSION)!g		
 	
-pkgpython_PYTHON = __init__.py main.py config.py
+pkgpython_PYTHON = \
+	__init__.py \
+	baseui.py \
+	commandlineui.py \
+	common.py \
+	config.py \
+	databasecreator.py \
+	hildonui.py \
+	gtkui.py \
+	searchbackend.py
 
 CLEANFILES = config.py
 EXTRA_DIST = config.py.in
