--- a/trunk/bin/classix.in
+++ b/trunk/bin/classix.in
@@ -3,7 +3,10 @@
 
 import os, gtk
 import gettext, locale
-from classix import config, main
+
+from classix import config, commandlineui, hildonui, gtkui
+
+gtk.gdk.threads_init()
 
 locale.setlocale(locale.LC_ALL, "")
 # Setting the text domain for the locale module is important for gtk.Builder.
@@ -20,10 +23,10 @@ except ImportError:
     hildon_loaded = False
 
 if len(os.sys.argv) > 1:
-    main_window = main.CommandLineInterface()
+    main_window = commandlineui.CommandLineInterface()
 elif hildon_loaded:
-    main_window = main.HildonMainWindow(ui_file_name=ui_file_name)
+    main_window = hildonui.HildonMainWindow(ui_file_name=ui_file_name)
 else:
-    main_window = main.MainWindow(ui_file_name=ui_file_name)
+    main_window = gtkui.MainWindow(ui_file_name=ui_file_name)
 
 main_window.run()
