2009-11-07  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
	* classix/Makefile.am: Added classix/bagofwordscreator.py
	* classix/bagofwordscreator.py: Isolated code splitting strings in lists.
	* classix/searchbackend.py: Switched to use bagofwordscreator.py.

--- a/classix/Makefile.am
+++ b/classix/Makefile.am
@@ -10,6 +10,7 @@ do_subst = sed \
 	
 pkgpython_PYTHON = \
 	__init__.py \
+	bagofwordscreator.py \
 	baseui.py \
 	commandlineui.py \
 	common.py \
