--- a/branches/ubuntu/configure.ac
+++ b/branches/ubuntu/configure.ac
@@ -1,11 +1,11 @@
 # -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT(Classix, 0.2, http://code.google.com/p/classix/issues, classix,
+AC_INIT(Classix, 0.3, http://code.google.com/p/classix/issues, classix,
 	http://code.google.com/p/classix/)
 AC_COPYRIGHT([Copyright (C) 2009 the Classix authors.
 This file is distributed under the same license as the AC_PACKAGE_NAME package.])
-AC_CONFIG_SRCDIR(classix.in)
+AC_CONFIG_SRCDIR(bin/classix.in)
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
@@ -27,7 +27,8 @@ AM_CONDITIONAL([MAEMO], [test "x$use_maemo" = "xyes"])
 
 AC_CONFIG_FILES([
 	Makefile
+	bin/Makefile
+	classix/Makefile
 	data/Makefile
-	po/Makefile.in
-	src/Makefile])
+	po/Makefile.in])
 AC_OUTPUT
