Classix was rewritten in Vala
* configure.ac: bumped version to 0.4
* Python code removed, Vala code added.
* Initial support for displaying inclusion and exclusion notes.
* Read data from the original pure-text data file and its indexes
  instead of from a generated data base.
* Refer to HACKING for instructions on how to use the data files.
* GUI is in Brazilian Portuguese: no need for translation
* ChangeLog was removed, use 'git log' instead.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,16 +1,25 @@
 ## Process this file with automake to produce Makefile.in
 ## AUTOMAKE_OPTIONS = subdir-objects
-SUBDIRS = bin classix data po
 
-DISTCLEANFILES = \
-	intltool-extract \
-	intltool-merge   \
-	intltool-update  \
-	po/.intltool-merge-cache
-	
-EXTRA_DIST = \
-	intltool-extract.in \
-	intltool-merge.in   \
-	intltool-update.in
+bin_PROGRAMS = classix
+classix_SOURCES = src/classix.vala
 
-## TODO: include debian/* files if they are found.
+INCLUDES = $(CLASSIX_CFLAGS) \
+           -DLOCALEDIR=\""$(localedir)"\" \
+           -DPKGDATADIR=\""$(pkgdatadir)"\" \
+           -DPKGLIBDIR=\""$(pkglibdir)"\"
+
+VALAFLAGS = @CLASSIX_PACKAGES@
+
+classix_LDADD = $(CLASSIX_LIBS)
+
+dist_pkgdata_DATA = data/CID10N4A.DAT \
+                    data/CID10N4A.DIC \
+                    data/CID10N4A.INV \
+                    data/classix.ui
+EXTRA_DIST = data/classix.desktop
+
+desktopdir = $(datadir)/applications
+desktop_DATA = data/classix.desktop
+
+dist_doc_DATA = AUTHORS COPYING HACKING INSTALL LEIAME NEWS README
